--- a/stylesheets.css
+++ b/stylesheets.css
@@ -8,8 +8,8 @@
   body {
     background-color: lightgreen;
   }
-}
 
+ 
 code {
   font-size:19px;
   font-weight:bold;
@@ -24,7 +24,8 @@ header {
   padding:4px;
   display:block;
   text-align:center; 
-  border-radius:4px;
+  border-radius:7px;
+  border-style:outset;
 }
 
 html {
@@ -75,7 +76,13 @@ navbar a {
 }
 
 ul {
-  list-style-image: linear-gradient(to left bottom, green, blue);
+  list-style-image: linear-gradient(to left bottom, cyan, #134f5c);
+}
+
+li::marker {
+    height: 4px;
+    width: 4px;
+    font-size: 150%;
 }
 
 #navigation {
