--- a/stylesheets.css
+++ b/stylesheets.css
@@ -2,13 +2,62 @@
   img {
     width:50%;
   }
+  
+   #navbar {
+    width:50%;
+    height:auto;
+  }
+  
+  #main-doc {
+   width:50%;
+   height:auto; 
+   margin-left:180px;
+   border-left:none !important;
+  }
+  
 }
 
-@media screen and (min-width: 400px) {
-  body {
-    background-color: lightgreen;
+@media only screen 
+  and (max-width: 480px) 
+  and (max-width: 1025px) {
+   
+    html{
+   scroll-padding-left:10rem !important; 
+    }
+    
+    body {
+      max-width:100vw !important;
+      max-height:100vh !important;  
+    }
+    
+   #navbar {
+    width:50%;
+    height:auto;
+    margin-left:0px !important;   
+    font-size:smaller;
   }
-
+      
+    #navigation li {
+      margin-left:0px !important;
+    }
+  
+  #main-doc {
+   width:50%;
+   height:auto; 
+   margin-left:180px !important;
+    border-left:none !important;
+  }
+    
+    img {
+      height:95px !important;
+      width:auto;   
+    }  
+    
+    div#result{
+      width:100%;
+    }
+    
+}
  
 code {
   font-size:19px;
@@ -116,14 +165,13 @@ section {
   text-align:center;
   color:#0C2D48;
   font-weight:bold;
+  
 }
 
 .fa-water, .fa-pagelines {
   margin-left:7px;
 }
 
-
- 
 
 .mybutton {
   margin-left:40px;
